--- a/personlwebsite1.html
+++ b/personlwebsite1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Jalaj Sharma - Personal Website</title>
-  <link rel="stylesheet" href="/Users/j.sharma/style2.css"> <!-- Link to external CSS file for styling -->
+  <link rel="stylesheet" href="style2.css"> <!-- Link to external CSS file for styling -->
 </head>
 <body>
   <header>
